--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,73 +45,16 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-size: cover;
-    background-position: center;
-}
-
-@media screen and (min-width: 900px) {
-
-main {
-    display: flex;
-    justify-content: space-around;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #ffffff;
-}
-
-section {
-    width: 75%;
-    margin-left: 20px;
-}
-
-#search-engine-optimization, #online-reputation-management, #social-media-marketing {
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-    display: flex;
-    justify-content: flex-start;
-    align-self: flex-start;
-}
-
-#search-engine-optimization, #online-reputation-management {
-    margin-bottom: 20px;
-}
-
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-
-#search-engine-optimization img, #social-media-marketing img {
-    max-height: 200px;
-    padding-right: 25px;
-}
-
-#online-reputation-management img {
-    max-height: 200px;
-}
-
-aside {
-    margin-right: 15px;
-    padding: 20px;
-    width: 20%;
-    height: 100%;
-    background-color: #2589bd;
 }
 
 h3 {
     margin-bottom: 10px;
     text-align: center;
     padding-top: 32px;
-}
-
-.benefit  {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+    word-wrap: break-word;
 }
 
 footer {
@@ -124,26 +67,96 @@ footer {
     font-size: 20px;
 }
 
+@media screen and (min-width: 900px) {
+
+
+    .hero {
+        height: 800px;
+        width: 100%;
+        margin-bottom: 25px;
+        background-size: cover;
+        background-position: center;
+    }
+
+    main {
+        display: flex;
+        justify-content: space-around;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: #ffffff;
+    }
+
+        
+    section {
+        width: 75%;
+        margin-left: 20px;
+    }
+
+    #search-engine-optimization, #online-reputation-management, #social-media-marketing {
+        padding: 50px;
+        height: 300px;
+        background-color: #0072bb;
+        display: flex;
+        justify-content: flex-start;
+        align-self: flex-start;
+    }
+
+    #search-engine-optimization, #online-reputation-management {
+        margin-bottom: 20px;
+    }
+
+    #search-engine-optimization img, #social-media-marketing img {
+        max-height: 200px;
+        padding-right: 25px;
+    }
+
+    #online-reputation-management img {
+        max-height: 200px;
+    }
+
+
+    aside {
+        margin-right: 15px;
+        padding: 20px;
+        width: 20%;
+        height: 100%;
+        background-color: #2589bd;
+    }
+
+    .benefit-image  {
+        display: block;
+        margin: 10px auto;
+        max-width: 150px;
+        align-items: center;
+    }
 
 }
 
 @media screen and (max-width: 899px) {
 
+    .hero {
+        height: 100%;
+        width: 100%;
+        margin-bottom: 25px;
+        background-size: cover;
+        background-position: center;
+    }
+
     main {
         display: flex;
         align-items: center;
-        flex-direction: column;
+        justify-content: space-around;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: #ffffff;
     }
-    
+
     section {
-        width: 75%;
-        margin-left: 20px;
+        width: 70%;
+        margin-left: 5px;
+        margin-right: 10px;
     }
-    
+
     #search-engine-optimization {
-        padding: 50px;
+        padding: 10px;
         height: 30%;
         background-color: #0072bb;
         display: flex;
@@ -153,7 +166,7 @@ footer {
     }
 
     #online-reputation-management {
-        padding: 50px;
+        padding: 10px;
         height: 33%;
         background-color: #0072bb;
         display: flex;
@@ -163,17 +176,13 @@ footer {
     }
 
     #social-media-marketing {
-        padding: 50px;
+        padding: 10px;
         height: 28%;
         background-color: #0072bb;
         display: flex;
         align-items: center;
         flex-direction: column;
-    }
-    
-    h2 {
         margin-bottom: 20px;
-        font-size: 36px;
     }
     
     #search-engine-optimization img, #social-media-marketing img {
@@ -191,33 +200,18 @@ footer {
     }
 
     aside {
-        margin-right: 15px;
-        padding: 20px;
-        width: 20%;
+        margin-right: 5px;
+        padding: 0px;
+        width: 25%;
         height: 100%;
         background-color: #2589bd;
     }
-    
-    h3 {
-        margin-bottom: 10px;
-        text-align: center;
-        padding-top: 32px;
-    }
-    
-    .benefit  {
-        display: block;
-        margin: 10px auto;
-        max-width: 150px;
-    }
-    
-    footer {
-        padding: 30px;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        text-align: center;
-    }
-    
-    .footer-top {
-        font-size: 20px;
+
+    .benefit-image  {
+        max-width: 100px;
+        align-items: center;
+        padding-top: 30px;
+        padding-bottom: 7px;
     }
     
 }
